# VibeTools

./: .gitignore  CLAUDE.md  CREDITS.md  LICENSE  README.md  VT_Preview_480p.epr  index.html  package.json
.github/: FUNDING.yml
CSXS/: manifest.xml
cpp/: CMakeLists.txt  VT_ExternalObject.cpp  VT_ExternalObject.def  VT_ExternalObject.h  build.bat
css/: styles.css
importer/: CMakeLists.txt  VT_Importer.cpp  VT_Importer.def  VT_Importer.h  VT_Importer.rc  build.bat
js/: audioPreview.js  log.js  main.js
jsx/: hostscript.jsx
lib/: CSInterface.js
mockup/: mockup_redesign.html  mockup_warm_ember.html  preview.html
native/VT_ControlSurface/: VT_ControlSurface.cpp  VT_ControlSurface.sln  VT_ControlSurface.vcxproj
support_files/: VT_Importer.prm
tools/: create_placeholder.js
